# Moonhare_Engine

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  push_to_git.sh
crates/moonhare_derives/: Cargo.toml
crates/moonhare_derives/src/: lib.rs  node.rs  system.rs
crates/moonhare_ecs/: Cargo.toml
crates/moonhare_ecs/src/: component.rs  generational_index.rs  lib.rs  world.rs
crates/moonhare_event/: Cargo.toml  README.md
crates/moonhare_event/src/: event.rs  event_listener.rs  lib.rs
crates/moonhare_game/: Cargo.toml  README.md
crates/moonhare_game/src/: lib.rs
crates/moonhare_game/src/basic/: game_window.rs  mod.rs  window.rs  world.rs
crates/moonhare_game/src/nodes/: node.rs  window.rs
crates/moonhare_game/src/systems/: mod.rs  render_system.rs  system.rs  update_system.rs  window_system.rs
crates/moonhare_graphics/: Cargo.toml
crates/moonhare_graphics/src/: backend.rs  color.rs  lib.rs  shader.rs
crates/moonhare_internal/: Cargo.toml
crates/moonhare_internal/src/: lib.rs
crates/moonhare_log/src/: lib.rs
crates/moonhare_window/: Cargo.toml  README.md
crates/moonhare_window/src/: lib.rs  opengl_window.rs  window_config.rs  winit_window.rs
moonhare_engine/: Cargo.toml  README.md
moonhare_engine/src/: game.rs  game_plugin.rs  lib.rs  vertex.rs  window.rs
moonhare_engine/src/core/: game.rs
moonhare_engine/src/window/: mod.rs  window_config.rs  winit_window.rs
moonhare_event/: Cargo.toml
moonhare_event/src/: event.rs  lib.rs
moonhare_graphics/: Cargo.toml  README.md
moonhare_graphics/src/: lib.rs
moonhare_log/: Cargo.toml  README.md
moonhare_log/src/: lib.rs
moonhare_window/: Cargo.toml  README.md
playground/: Cargo.toml  README.md
playground/src/: main.rs
(+13 files in other folders)
