[package]
name = "moonhare_internal"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]

moonhare_derives = { path = "../moonhare_derives" }
moonhare_ecs = { path = "../moonhare_ecs" }
moonhare_event = { path = "../moonhare_event" }
moonhare_game = { path = "../moonhare_game" }
moonhare_graphics = { path = "../moonhare_graphics" }
moonhare_log = { path = "../moonhare_log" }
moonhare_window = { path = "../moonhare_window" }